--- a/cookbook/src/app/app.component.html
+++ b/cookbook/src/app/app.component.html
@@ -1,1 +1,7 @@
-<app-registration-form></app-registration-form>
+<nav>
+  <ul>
+    <li><a routerLink="/ingredients" routerLinkActive="active"
+       ariaCurrentWhenActive="page">Ingredients</a></li>
+  </ul>
+</nav>
+<router-outlet></router-outlet>
