Add link to home

--- a/cookbook/src/app/app.component.html
+++ b/cookbook/src/app/app.component.html
@@ -1,7 +1,11 @@
 <nav>
   <ul>
+    <li><a routerLink="/" routerLinkActive="active"
+       ariaCurrentWhenActive="page">Home</a>
+    </li>
     <li><a routerLink="/ingredients" routerLinkActive="active"
-       ariaCurrentWhenActive="page">Ingredients</a></li>
+       ariaCurrentWhenActive="page">Ingredients</a>
+    </li>
   </ul>
 </nav>
 <router-outlet></router-outlet>
