--- a/cookbook/src/app/Registration/registration-form/registration-form.component.html
+++ b/cookbook/src/app/Registration/registration-form/registration-form.component.html
@@ -1,4 +1,4 @@
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<form [formGroup]="registerForm" (ngSubmit)="register()">
     <input type="text" placeholder="Username" formControlName = "username">
     <input type="password" placeholder="password" formControlName = "password">
     <button class="button" type="submit">Submit</button>
