--- a/cookbook/src/app/app.component.html
+++ b/cookbook/src/app/app.component.html
@@ -6,6 +6,9 @@
     <li><a routerLink="/ingredients" routerLinkActive="active"
        ariaCurrentWhenActive="page">Ingredients</a>
     </li>
+    <li><a routerLink="/recipes" routerLinkActive="active"
+      ariaCurrentWhenActive="page">Recipes </a>
+    </li>
     <li><a routerLink="/registration" routerLinkActive="active"
       ariaCurrentWhenActive="page">Register </a>
    </li>
