Start styling recipe-card component

--- a/cookbook/src/app/Recipe/recipe-card/recipe-card.component.html
+++ b/cookbook/src/app/Recipe/recipe-card/recipe-card.component.html
@@ -1,1 +1,13 @@
-{{recipe}}
+<mat-card>
+    <img mat-card-image src="../../../assets/palceholder.svg" alt="picture of food" width="200px">
+    <mat-card-title>
+        {{recipe?.name}}
+    </mat-card-title>
+    <mat-card-content>
+        <mat-icon svgIcon="gluten_free"></mat-icon>
+        <mat-icon svgIcon="vegan"></mat-icon>
+        <mat-icon svgIcon="dairy_free"></mat-icon>
+        <mat-icon svgIcon="vegetarian"></mat-icon>
+    </mat-card-content>
+
+</mat-card>
