--- a/cookbook/src/app/Recipe/recipe-card/recipe-card.component.html
+++ b/cookbook/src/app/Recipe/recipe-card/recipe-card.component.html
@@ -4,10 +4,18 @@
         {{recipe?.name}}
     </mat-card-title>
     <mat-card-content>
-        <mat-icon svgIcon="gluten_free"></mat-icon>
-        <mat-icon svgIcon="vegan"></mat-icon>
-        <mat-icon svgIcon="dairy_free"></mat-icon>
-        <mat-icon svgIcon="vegetarian"></mat-icon>
+        <span *ngIf="recipe?.isGlutenFree">
+            <mat-icon svgIcon="gluten_free"></mat-icon>
+        </span>
+        <span *ngIf="recipe?.isVegan">
+            <mat-icon svgIcon="vegan"></mat-icon>
+        </span>
+        <span *ngIf="recipe?.isDairyFree">
+            <mat-icon svgIcon="dairy_free"></mat-icon>
+        </span>
+        <span *ngIf="recipe?.isVegetarian">
+            <mat-icon svgIcon="vegetarian"></mat-icon>
+        </span>
     </mat-card-content>
 
 </mat-card>
