Add details button

--- a/cookbook/src/app/Recipe/recipe-card/recipe-card.component.html
+++ b/cookbook/src/app/Recipe/recipe-card/recipe-card.component.html
@@ -17,5 +17,8 @@
             <mat-icon svgIcon="vegetarian"></mat-icon>
         </span>
     </mat-card-content>
+    <mat-card-actions>
+        <button mat-button (click)="showDetails()"> Check it out</button>
+    </mat-card-actions>
 
 </mat-card>
