--- a/cookbook/src/app/Recipe/recipe-list/recipe-list.component.html
+++ b/cookbook/src/app/Recipe/recipe-list/recipe-list.component.html
@@ -1,4 +1,4 @@
-<ul>
+<ul style="list-style-type: none;">
     <li *ngFor="let recipe of recipes;">
         <app-recipe-card [recipe]="recipe"></app-recipe-card>
     </li>
