--- a/cookbook/src/app/app.component.html
+++ b/cookbook/src/app/app.component.html
@@ -1,22 +1,1 @@
-<mat-toolbar color="primary">
-  <div class="toolbar-list">
-    <ul>
-      <li><a routerLink="/" routerLinkActive="active"
-         ariaCurrentWhenActive="page">Home</a>
-      </li>
-      <li><a routerLink="/ingredients" routerLinkActive="active"
-         ariaCurrentWhenActive="page">Ingredients</a>
-      </li>
-      <li><a routerLink="/recipes" routerLinkActive="active"
-        ariaCurrentWhenActive="page">Recipes</a>
-      </li>
-      <li><a routerLink="/registration" routerLinkActive="active"
-        ariaCurrentWhenActive="page">Register</a>
-     </li>
-     <li><a routerLink="/login" routerLinkActive="active"
-      ariaCurrentWhenActive="page">Login</a>
-    </li>
-   </ul>
-  </div>
-</mat-toolbar>
-<router-outlet></router-outlet>
+<app-navbar></app-navbar>
