--- a/cookbook/src/app/navbar/navbar.component.html
+++ b/cookbook/src/app/navbar/navbar.component.html
@@ -1,22 +1,23 @@
 <mat-toolbar color="primary">
-    <div class="toolbar-list">
-      <ul>
-        <li><a routerLink="/" routerLinkActive="active"
-           ariaCurrentWhenActive="page">Home</a>
-        </li>
-        <li><a routerLink="/ingredients" routerLinkActive="active"
-           ariaCurrentWhenActive="page">Ingredients</a>
-        </li>
-        <li><a routerLink="/recipes" routerLinkActive="active"
-          ariaCurrentWhenActive="page">Recipes</a>
-        </li>
-        <li><a routerLink="/registration" routerLinkActive="active"
-          ariaCurrentWhenActive="page">Register</a>
-       </li>
-       <li><a routerLink="/login" routerLinkActive="active"
-        ariaCurrentWhenActive="page">Login</a>
+  <div class="toolbar-list">
+    <ul>
+      <li><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
       </li>
-     </ul>
-    </div>
-  </mat-toolbar>
-  <router-outlet></router-outlet>
+      <li><a routerLink="/ingredients" routerLinkActive="active" ariaCurrentWhenActive="page">Ingredients</a>
+      </li>
+      <li><a routerLink="/recipes" routerLinkActive="active" ariaCurrentWhenActive="page">Recipes</a>
+      </li>
+      <li><a routerLink="/registration" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
+      </li>
+      <li *ngIf="isLoggedIn; else loginLink;">
+        <button>Log out</button>
+      </li>
+      <ng-template #loginLink>
+        <li>
+          <a routerLink="/login" routerLinkActive="active" ariaCurrentWhenActive="page">Login</a>
+        </li>
+      </ng-template>
+    </ul>
+  </div>
+</mat-toolbar>
+<router-outlet></router-outlet>
