--- a/cookbook/src/app/Recipe/recipe-details/recipe-details.component.html
+++ b/cookbook/src/app/Recipe/recipe-details/recipe-details.component.html
@@ -1,13 +1,31 @@
-<div *ngIf="recipe">
-    {{ recipe.name }}
-    <div>Ingredients : 
-        <ul>
-            <li *ngFor="let ingredient of recipe.ingredients;">
-            <div>{{ingredient.ingredient.name}}
-            {{ingredient.amount}} {{ingredient.ingredient.unitOfMeasure}}</div>
-            </li>
-        </ul>
-    </div>
-    {{recipe.description}}
-</div>
-
+<mat-card>
+    <mat-card-header>
+        <img mat-card-image src="../../../assets/palceholder.svg">
+    </mat-card-header>
+    <mat-card-title-group>
+        <mat-card-title class="card-title">{{recipe?.name}}</mat-card-title>
+        <span *ngIf="recipe?.isGlutenFree">
+            <mat-icon svgIcon="gluten_free" matTooltip="Gluten free"></mat-icon>
+        </span>
+        <span *ngIf="recipe?.isDairyFree">
+            <mat-icon svgIcon="dairy_free" matTooltip="Dairy free"></mat-icon>
+        </span>
+        <span *ngIf="recipe?.isVegetarian">
+            <mat-icon svgIcon="vegetarian" matTooltip="Vegetarian"></mat-icon>
+        </span>
+        <span *ngIf="recipe?.isVegan">
+            <mat-icon svgIcon="vegan" matTooltip="Vegan"></mat-icon>
+        </span>
+    </mat-card-title-group>
+    <mat-divider></mat-divider>
+    <hr />
+    <mat-card-content>
+        <p *ngFor="let ingredient of recipe?.ingredients;">
+        {{ingredient.amount}}{{ingredient.ingredient.unitOfMeasure}} of {{ingredient.ingredient.name}}
+        </p>
+        <mat-divider></mat-divider>
+        <p>
+            {{recipe?.description}}
+        </p>
+    </mat-card-content>
+</mat-card>
