--- a/cookbook/src/app/navbar/navbar.component.html
+++ b/cookbook/src/app/navbar/navbar.component.html
@@ -3,11 +3,11 @@
     <ul>
       <li><a routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page">Home</a>
       </li>
-      <li><a routerLink="/ingredients" routerLinkActive="active" ariaCurrentWhenActive="page">Ingredients</a>
-      </li>
       <li><a routerLink="/recipes" routerLinkActive="active" ariaCurrentWhenActive="page">Recipes</a>
       </li>
-      <li><a routerLink="/registration" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
+      <li *ngIf="isLoggedIn"><a routerLink="/ingredients" routerLinkActive="active" ariaCurrentWhenActive="page">Ingredients</a>
+      </li>
+      <li *ngIf="!isLoggedIn"><a routerLink="/registration" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
       </li>
       <li *ngIf="isLoggedIn; else loginLink;">
         <a (click)="logOut()" routerLink="/" routerLinkActive="active" ariaCurrentWhenActive="page"> Log out
