Add starting design

--- a/cookbook/src/app/Recipe/recipe-form/ingredient-adder/ingredient-adder.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/ingredient-adder/ingredient-adder.component.html
@@ -1,22 +1,29 @@
 <mat-card>
-  <mat-card-content *ngFor="let ingredient of ingredients; let i = index">
-    <table class="example-full-width" cellspacing="0">
-      <tr>
-        <td><mat-form-field>
-            <mat-label>Amount</mat-label>
-            <input matInput>
-          </mat-form-field></td>
-        <td><mat-form-field>
-            <mat-label>Ingredient</mat-label>
-            <input matInput>
-          </mat-form-field></td>
-        <td><button mat-stroked-button (click)="deleteIngredient(i)"><mat-icon>delete</mat-icon></button>
-        </td>
-      </tr>
-    </table>
-  </mat-card-content>
   <mat-card-title>Ingredients</mat-card-title>
+  <mat-card-content formArrayName="ingredients">
+    <div *ngFor="let ingredient of ingredients.controls; let i = index">
+      <table cellspacing="0">
+        <tr>
+          <td><mat-form-field>
+              <mat-label>Amount</mat-label>
+              <input matInput formControlName="amount">
+            </mat-form-field></td>
+          <td><mat-form-field>
+              <mat-label>Ingredient</mat-label>
+              <input matInput formControlName="ingredient" type="text" [matAutocomplete]="auto">
+              <mat-autocomplete #auto="matAutocomplete">
+                @for (option of savedIngredients; track option.name) {
+                <mat-option [value]="option">{{option.name}}</mat-option>
+                }
+              </mat-autocomplete>
+            </mat-form-field></td>
+          <td><button mat-stroked-button (click)="deleteIngredient(i)"><mat-icon>delete</mat-icon></button>
+          </td>
+        </tr>
+      </table>
+    </div>
+  </mat-card-content>
   <mat-card-actions align="start">
-    <button (click)="bumpIngredients()"><mat-icon>add</mat-icon>Add ingredient</button>
+    <button (click)="addIngredient()"><mat-icon>add</mat-icon>Add ingredient</button>
   </mat-card-actions>
 </mat-card>
