--- a/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-    <form class="recipeForm" [formGroup]="recipeForm">
+    <form class="recipeForm" [formGroup]="recipeForm" (ngSubmit)="submit()">
         <app-file-upload (fileEvent)="addImage($event)"></app-file-upload>
         <mat-form-field class="full-width">
             <mat-label>Title: </mat-label>
@@ -9,7 +9,38 @@
             <mat-label>Description: </mat-label>
             <textarea matInput type="textarea" formControlName="description" placeholder="Steps..."></textarea>
         </mat-form-field>
-        <app-ingredient-adder></app-ingredient-adder>
-        <button type="submit" (click)="submit">Submit recipe</button>
+        <mat-card>
+            <mat-card-title>Ingredients</mat-card-title>
+            <mat-card-content formArrayName="ingredients">
+                <div *ngFor="let ingredientForm of ingredients.controls; let i = index" formGroupName="ingredientForm">
+                    <div>
+                        <table cellspacing="0">
+                            <tr>
+                                <td><mat-form-field>
+                                        <mat-label>Amount</mat-label>
+                                        <input matInput formControlName="amount">
+                                    </mat-form-field></td>
+                                <td><mat-form-field>
+                                        <mat-label>Ingredient</mat-label>
+                                        <input matInput formControlName="ingredient" type="text"
+                                            [matAutocomplete]="auto">
+                                        <mat-autocomplete #auto="matAutocomplete">
+                                            @for (option of savedIngredients; track option.name) {
+                                            <mat-option [value]="option">{{option.name}}</mat-option>
+                                            }
+                                        </mat-autocomplete>
+                                    </mat-form-field></td>
+                                <td><button mat-stroked-button
+                                        (click)="deleteIngredient(i)"><mat-icon>delete</mat-icon></button>
+                                </td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </mat-card-content>
+            <mat-card-actions align="start">
+                <button (click)="addIngredient()"><mat-icon>add</mat-icon>Add ingredient</button>
+            </mat-card-actions>
+        </mat-card> <button type="submit" (click)="submit">Submit recipe</button>
     </form>
 </mat-card>
