--- a/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
@@ -13,7 +13,7 @@
             <mat-card-title>Ingredients</mat-card-title>
             <mat-card-content formArrayName="ingredients">
                 <div *ngFor="let ingredientForm of ingredients.controls; let i = index" formGroupName="ingredientForm">
-                    <div>
+                    <div formControlName="{{i}}">
                         <table cellspacing="0">
                             <tr>
                                 <td><mat-form-field>
@@ -22,11 +22,11 @@
                                     </mat-form-field></td>
                                 <td><mat-form-field>
                                         <mat-label>Ingredient</mat-label>
-                                        <input matInput formControlName="ingredient" type="text"
+                                        <input onClick="console.log(event.target.value)" matInput formControlName="ingredient" type="text"
                                             [matAutocomplete]="auto">
                                         <mat-autocomplete #auto="matAutocomplete">
                                             @for (option of savedIngredients; track option.name) {
-                                            <mat-option [value]="option">{{option.name}}</mat-option>
+                                            <mat-option [value]="option.name">{{option.name}}</mat-option>
                                             }
                                         </mat-autocomplete>
                                     </mat-form-field></td>
