--- a/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
@@ -13,28 +13,32 @@
             <mat-card-title>Ingredients</mat-card-title>
             <mat-card-content formArrayName="ingredients">
                 <div *ngFor="let ingredientForm of ingredients.controls; let i = index" [formGroupName]="i">
-                        <table cellspacing="0">
-                            <tr>
-                                <td><mat-form-field>
-                                        <mat-label>Amount</mat-label>
-                                        <input matInput formControlName="amount">
-                                    </mat-form-field></td>
-                                <td><mat-form-field>
-                                        <mat-label>Ingredient</mat-label>
-                                        <input matInput formControlName="ingredient" type="text"
-                                            [matAutocomplete]="auto">
-                                        <mat-autocomplete #auto="matAutocomplete">
-                                            @for (option of savedIngredients; track option.name) {
-                                            <mat-option [value]="option.name">{{option.name}}</mat-option>
-                                            }
-                                        </mat-autocomplete>
-                                    </mat-form-field></td>
-                                <td><button type="button" mat-stroked-button
-                                        (click)="deleteIngredient(i)"><mat-icon>delete</mat-icon></button>
-                                </td>
-                            </tr>
-                        </table>
-                    </div>
+                    <table cellspacing="0">
+                        <tr>
+                            <td>
+                                <mat-form-field>
+                                    <mat-label>Amount</mat-label>
+                                    <input matInput formControlName="amount">
+                                </mat-form-field>
+                            </td>
+                            <td>
+                                <mat-form-field>
+                                    <mat-label>Ingredient</mat-label>
+                                    <input matInput formControlName="ingredient" type="text" [matAutocomplete]="auto">
+                                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                                        <mat-option *ngFor="let option of savedIngredients;" [value]="option">
+                                            {{option.name}}
+                                        </mat-option>
+                                    </mat-autocomplete>
+                                </mat-form-field>
+                            </td>
+                            <td>
+                                <button type="button" mat-stroked-button
+                                    (click)="deleteIngredient(i)"><mat-icon>delete</mat-icon></button>
+                            </td>
+                        </tr>
+                    </table>
+                </div>
             </mat-card-content>
             <mat-card-actions align="start">
                 <button type="button" (click)="addIngredient()"><mat-icon>add</mat-icon>Add ingredient</button>
