Add post method to recipe-service

--- a/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
@@ -18,7 +18,7 @@
                             <td>
                                 <mat-form-field>
                                     <mat-label>Amount</mat-label>
-                                    <input matInput formControlName="amount">
+                                    <input type="number" matInput formControlName="amount">
                                 </mat-form-field>
                             </td>
                             <td>
