--- a/cookbook/src/app/Authentication/registration-form/registration-form.component.html
+++ b/cookbook/src/app/Authentication/registration-form/registration-form.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-<form [formGroup]="registerForm" (ngSubmit)="register()" class="register-form" >
+  <form [formGroup]="registerForm" (ngSubmit)="register()" class="register-form">
     <mat-card>
       <mat-card-content>
         <mat-form-field appearance="fill">
@@ -9,6 +9,9 @@
         <mat-form-field appearance="fill">
           <mat-label>Password</mat-label>
           <input matInput type="password" formControlName="password" placeholder="Password">
+          <mat-error *ngIf="registerForm.get('password')?.hasError('pattern')">
+            Please choose a password that is at least 5 characters long.
+          </mat-error>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
