Add type "button" to file-upload-component

--- a/cookbook/src/app/file-upload/file-upload.component.html
+++ b/cookbook/src/app/file-upload/file-upload.component.html
@@ -5,7 +5,7 @@
 
    {{fileName || "No file uploaded yet."}}
 
-    <button mat-mini-fab color="primary" class="upload-btn"
+    <button type="button" mat-mini-fab color="primary" class="upload-btn"
       (click)="fileUpload.click()">
         <mat-icon>attach_file</mat-icon>
     </button>
