Center the image and title

--- a/cookbook/src/app/Recipe/recipe-details/recipe-details.component.css
+++ b/cookbook/src/app/Recipe/recipe-details/recipe-details.component.css
@@ -1,3 +1,26 @@
-.card-title {
-    padding-left: 20px;
+#title {
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+#details-container {
+    display: flex;
+}
+
+.header {
+    margin: auto;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+#title {
+    margin: auto;
+    text-align: center;
+}
+
+#icons {
+    margin: auto;
+    display: flex;
 }
