--- a/cookbook/src/app/Authentication/registration-error-dialog/registration-error-dialog.component.html
+++ b/cookbook/src/app/Authentication/registration-error-dialog/registration-error-dialog.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Registration Error</h2>
 <mat-dialog-content>
-  <p>The password you provided is too short. Please choose a password that is at least 5 characters long.</p>
+  <p>{{ data.message }}</p>
 </mat-dialog-content>
 <mat-dialog-actions>
   <button mat-button (click)="close()">OK</button>
