--- a/cookbook/src/app/Authentication/registration-form/registration-form.component.html
+++ b/cookbook/src/app/Authentication/registration-form/registration-form.component.html
@@ -5,17 +5,23 @@
         <mat-form-field appearance="fill">
           <mat-label>Username</mat-label>
           <input matInput type="text" formControlName="username" placeholder="Username">
+          <mat-error *ngIf="registerForm.get('username')?.hasError('required')">
+            Username is required.
+          </mat-error>
         </mat-form-field>
         <mat-form-field appearance="fill">
           <mat-label>Password</mat-label>
           <input matInput type="password" formControlName="password" placeholder="Password">
-          <mat-error *ngIf="registerForm.get('password')?.hasError('pattern')">
-            Please choose a password that is at least 5 characters long.
+          <mat-error *ngIf="registerForm.get('password')?.hasError('required')">
+            Password is required.
+          </mat-error>
+          <mat-error *ngIf="registerForm.get('password')?.hasError('minlength') && !registerForm.get('password')?.hasError('required')">
+            Password must be at least 5 characters long.
           </mat-error>
         </mat-form-field>
       </mat-card-content>
       <mat-card-actions>
-        <button mat-raised-button color="primary" type="submit">Submit</button>
+        <button mat-raised-button color="primary" type="submit" [disabled]="registerForm.invalid">Submit</button>
       </mat-card-actions>
     </mat-card>
   </form>
