--- a/cookbook/src/app/navbar/navbar.component.html
+++ b/cookbook/src/app/navbar/navbar.component.html
@@ -10,6 +10,8 @@
       <li>
         <a routerLink="/newRecipe" routerLinkActive="active" ariaCurrentWhenActive="page">New recipe</a>
       </li>
+      <li *ngIf="isLoggedIn"><a routerLink="/newIngredient" routerLinkActive="active" ariaCurrentWhenActive="page">New Ingredient</a>
+      </li>
       <li *ngIf="!isLoggedIn"><a routerLink="/registration" routerLinkActive="active" ariaCurrentWhenActive="page">Register</a>
       </li>
       <li *ngIf="isLoggedIn; else loginLink;">
