--- a/cookbook/src/app/Recipe/recipe-updater/recipe-updater.component.html
+++ b/cookbook/src/app/Recipe/recipe-updater/recipe-updater.component.html
@@ -1,56 +1,72 @@
-<mat-card>
-  <form class="recipe-form" [formGroup]="recipeForm" (ngSubmit)="saveRecipe(recipe?.id)">
-    <h2>Update Recipe</h2>    
+<mat-card class="recipe-form-container">
+  <form class="recipe-form" [formGroup]="recipeForm" (ngSubmit)="saveRecipe()">
+    <div id="image-upload-container">
+      <app-file-upload id="image-upload" (fileEvent)="addImage($event)"></app-file-upload>
+    </div>
+    
     <mat-form-field class="full-width">
       <mat-label>Title</mat-label>
-      <input matInput type="text" formControlName="name">
+      <input matInput type="text" formControlName="name" placeholder="Ex. Tiramisu">
       <mat-error *ngIf="recipeForm.controls['name'].invalid && recipeForm.controls['name'].touched">
         Title is required
       </mat-error>
     </mat-form-field>
-    
+
     <mat-form-field class="full-width">
       <mat-label>Description</mat-label>
-      <textarea matInput formControlName="description"></textarea>
+      <textarea matInput formControlName="description" placeholder="Steps..."></textarea>
       <mat-error *ngIf="recipeForm.controls['description'].invalid && recipeForm.controls['description'].touched">
         Description is required
       </mat-error>
     </mat-form-field>
-    
-    <mat-card>
-      <mat-card-title>Ingredients</mat-card-title>
-      <mat-card-content formArrayName="ingredients">
-        <div *ngFor="let ingredientForm of ingredients.controls; let i = index" [formGroupName]="i" class="ingredient-group">
-          <mat-form-field>
-            <mat-label>Amount</mat-label>
-            <input type="number" matInput formControlName="amount">
-          </mat-form-field>
-          <mat-form-field class="unit-field">
-            <mat-label>Unit</mat-label>
-            <input matInput type="text" formControlName="unit" readonly>
-          </mat-form-field>
-          <mat-form-field class="ingredient-autocomplete">
-            <mat-label>Ingredient</mat-label>
-            <input matInput formControlName="ingredient" [matAutocomplete]="auto">
-            <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-              <mat-option *ngFor="let option of savedIngredients" [value]="option">
-                {{ option.name }}
-              </mat-option>
-            </mat-autocomplete>
-          </mat-form-field>
-          
-          <button type="button" mat-icon-button color="warn" (click)="deleteIngredient(i)">
-            <mat-icon>delete</mat-icon>
-          </button>
+
+    <mat-card class="ingredients-container">
+      <mat-card-title id="ingredient-segment-title">Ingredients</mat-card-title>
+      <mat-card-content class="ingredients" formArrayName="ingredients">
+        <div *ngFor="let ingredientForm of ingredients.controls; let i = index" [formGroupName]="i">
+          <table cellspacing="0">
+            <tr>
+              <td>
+                <mat-form-field>
+                  <mat-label>Amount</mat-label>
+                  <input type="number" matInput formControlName="amount">
+                </mat-form-field>
+              </td>
+              <td>
+                <mat-form-field>
+                  <mat-label>Unit</mat-label>
+                  <input matInput type="text" formControlName="unit" readonly>
+                </mat-form-field>
+              </td>
+              <td>
+                <mat-form-field>
+                  <mat-label>Ingredient</mat-label>
+                  <input matInput formControlName="ingredient" type="text" [matAutocomplete]="auto">
+                  <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                    <mat-option *ngFor="let option of savedIngredients" [value]="option">
+                      {{option.name}}
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
+              </td>
+              <td>
+                <button type="button" mat-stroked-button class="delete-button" (click)="deleteIngredient(i)">
+                  <mat-icon style="margin: auto;">delete</mat-icon>
+                </button>
+              </td>
+            </tr>
+          </table>
         </div>
       </mat-card-content>
-      <mat-card-actions>
-        <button type="button" mat-raised-button color="primary" (click)="addIngredient()">
-          <mat-icon>add</mat-icon>Add Ingredient
+      <mat-card-actions align="start">
+        <button mat-button type="button" (click)="addIngredient()">
+          <mat-icon>add</mat-icon>Add ingredient
         </button>
       </mat-card-actions>
-    </mat-card> 
-    
-    <button type="submit" mat-raised-button color="accent">Submit Recipe</button>
+    </mat-card>
+
+    <mat-card-actions>
+      <button mat-stroked-button color="primary" id="submit-button" type="submit">Submit recipe</button>
+    </mat-card-actions>
   </form>
 </mat-card>
