delete ingredient from list

--- a/cookbook/src/app/Ingredient/ingredient-list/ingredient-list.component.html
+++ b/cookbook/src/app/Ingredient/ingredient-list/ingredient-list.component.html
@@ -1,6 +1,7 @@
 <div *ngIf="ingredients">
     <ul>
         <li *ngFor="let ingredient of ingredients">
+            {{ ingredient.id }}
             {{ ingredient.name }}
             {{ ingredient.unitOfMeasure }}
             {{ ingredient.isDairyFree }}
