--- a/cookbook/src/app/Ingredient/ingredient-list/ingredient-list.component.html
+++ b/cookbook/src/app/Ingredient/ingredient-list/ingredient-list.component.html
@@ -1,12 +1,9 @@
 <div *ngIf="ingredients">
     <ul>
         <li *ngFor="let ingredient of ingredients">
-            {{ ingredient.name }}
-            {{ ingredient.unitOfMeasure }}
-            {{ ingredient.isDairyFree }}
-            {{ ingredient.isEggFree }}
-            {{ ingredient.isGlutenFree }}
-            {{ ingredient.isMeatFree }}
+            {{ingredient.name}}
+            {{ingredient.category}}
+            {{ingredient.approved}}
             <button *ngIf="ingredient.id !== undefined" (click)="deleteIngredient(ingredient.id.toString())">Delete</button>
         </li>
     </ul>
