--- a/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
@@ -20,7 +20,7 @@
                             <td>
                                 <mat-form-field>
                                     <mat-label>Amount</mat-label>
-                                    <input type="number" matInput formControlName="amount">
+                                    <input type="text" matInput formControlName="amount">
                                 </mat-form-field>
                             </td>
                             <td>
