Switch value to string in ingredient select

--- a/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
+++ b/cookbook/src/app/Recipe/recipe-form/recipe-form.component.html
@@ -28,10 +28,10 @@
                                     <mat-label>Ingredient</mat-label>
                                     <input matInput formControlName="ingredient" type="text" [matAutocomplete]="auto">
                                     <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
-                                        <mat-option *ngFor="let option of savedIngredients;" [value]="option">
+                                        <mat-option *ngFor="let option of savedIngredients;" [value]="option.name">
                                             {{option.name}}
                                         </mat-option>
-                                    </mat-autocomplete>
+                                    </mat-autocomplete> 
                                 </mat-form-field>
                             </td>
                             <td>
